# bci-posthoc-analysis

./: .gitignore  AGENTS.md  README.md  fix_notebook_expected_rows.py  pyproject.toml  requirements.txt
code/: README.md
code/scripts/: run_posthoc_analysis.py
code/src/posthoc_analysis/: __init__.py  analysis.py  behavioral.py  config.py  consolidated.py  data_io.py  pipeline.py  preprocessing.py  triggers.py  viz.py
doc/: behavioral_analyses.md  behavioral_analyses_training.md  decoder_mat.md  eeg_preprocessing.md  experiment_structure.md  file_contents.md  file_structure.md  plotting.md  triggers.md
notebooks/: eeg_filtering_demo.ipynb  posthoc_analysis.ipynb  posthoc_analysis_walkthrough.ipynb
src/posthoc_analysis/: __init__.py  features.py  modeling.py  stats.py
