[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-posthoc-analysis"
version = "0.2.0"
description = "Python posthoc EEG analysis for CNBI attention-distraction dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "mne>=1.6",
  "scipy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
